tests/ui/rust-2018/uniform-paths/prelude-fail.stderr
error[E0432]: unresolved import `rustfmt`
  --> $DIR/prelude-fail.rs:4:5
   |
LL | use rustfmt::skip as imported_rustfmt_skip;
   |     ^^^^^^^ `rustfmt` is a tool module, not a module

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
